# FSA-FINAL

./: .gitignore  README.md  dev.db  next.config.ts  package-lock.json  package.json  test-prisma.js
RAG-system/: .env.example  .gitignore  README.md  pyproject.toml  sample_rag_test.txt
RAG-system/app/: config.py  main.py  models.py
RAG-system/app/ocr/: base.py  dotsocr.py  service.py  tesseract.py
RAG-system/app/processing/: chunking.py  converters.py
RAG-system/app/rag/: embeddings.py  generator.py  reranker.py  service.py  stock_data.py  vector_store.py
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/login/: route.ts
src/app/api/auth/register/: route.ts
src/app/api/chat/: route.ts
src/app/api/chat/[chatId]/: route.ts
src/app/api/chat/send/: route.ts
src/app/api/comparison/: route.ts
src/app/api/documents/: route.ts
src/app/api/documents/[docId]/: route.ts
src/app/api/evaluation/: route.ts
src/app/api/metrics/: route.ts
src/app/api/models/: route.ts
src/app/api/prompts/: route.ts
src/app/api/prompts/[promptId]/: route.ts
src/app/api/reports/: route.ts
src/components/layout/: ContextPanel.tsx  Sidebar.tsx  TopBar.tsx
src/components/screens/: ChatScreen.tsx  ComparisonScreen.tsx  DashboardScreen.tsx  DocumentsScreen.tsx  EvaluationScreen.tsx  LoginScreen.tsx  MetricsScreen.tsx  PromptsScreen.tsx  RegisterScreen.tsx  ReportsScreen.tsx  SettingsScreen.tsx
src/data/: mockData.ts
src/lib/: api-client.ts  auth.ts  db.ts  utils.ts
src/store/: appStore.ts
(+5 files in other folders)
