[project]
name = "rag-system"
version = "0.1.0"
description = "FastAPI RAG system with dotsocr and Tesseract OCR"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.23",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pdf2image>=1.17.0",
    "pillow>=10.4.0",
    "pydantic-settings>=2.6.0",
    "pypdf>=5.1.0",
    "PyMuPDF>=1.24.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.12",
    "sentence-transformers>=3.2.0",
    "uvicorn[standard]>=0.32.0"
]

[project.scripts]
rag-api = "app.main:main"

[tool.setuptools]
packages = ["app", "app.ocr", "app.processing", "app.rag"]
